# kernelNE

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: Model.h  Utilities.h  Vocabulary.h
src/: Model.cpp
